<resources>
    <string name="app_name">PlaneTicketSeller</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

<!--    Menu Items-->
    <string name="title_tickets">Авиабилеты</string>
    <string name="title_hotels">Отели</string>
    <string name="title_shorter">Короче</string>
    <string name="title_subscriptions">Подписки</string>
    <string name="title_profile">Профиль</string>

<!--    Tickets Page-->
    <string name="tickets_title">Поиск дешевых авиабилетов</string>
    <string name="title_section_music">Музыкально отлететь</string>
    <string name="show_places">Показать все места</string>
    <string name="first_time">Ваш первый раз</string>


<!--    Searchbar-->
    <string name="searchbar_minsk">Минск</string>
    <string name="searchbar_where_to">Куда - Турция</string>
    <string name="label_price">от %1$s₽</string>

<!--    Search actions-->
    <string name="label_anywhere">Куда угодно</string>
    <string name="weekends">Выходные</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="path">Сложный маршрут</string>

<!--    Chips -->
    <string name="label_chip_back">обратно</string>
    <string name="label_chip_date">24 фев, сб</string>
    <string name="label_chip_type">1,эконом</string>
    <string name="label_chip_filters">фильтры</string>

<!--    Direction Selected-->
    <string name="label_direct_flights">Прямые рельсы</string>
    <string name="label_show_all">Показать все</string>
    <string name="label_show_tickets">Посмотреть все билеты</string>
    <string name="subscribe">Подписка на цену</string>
    <string name="label_filter">Фильтр</string>
    <string name="label_price_graph">График цен</string>

<!--    Tickets Page-->
    <string name="title_all_tickets_places">%1$s - %2$s</string>
    <string name="title_all_tickets_info">%1$s, %2$s</string>

    <string name="flight_info_txt">Без пересадок</string>
    <string name="flight_info_divider"> \u00A0 / \u00A0</string>


</resources>