<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tickets"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_tickets" />

    <item
        android:id="@+id/navigation_hotels"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_hotels" />

    <item
        android:id="@+id/navigation_shorter"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_shorter" />

    <item
        android:id="@+id/navigation_subscriptions"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_subscriptions" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />

</menu>