<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tickets">

    <fragment
        android:id="@+id/navigation_tickets"
        android:name="dev.farad2020.planeticketseller.ui.tickets.TicketsFragment"
        android:label="@string/title_tickets"
        tools:layout="@layout/fragment_tickets_main" />

    <fragment
        android:id="@+id/navigation_hotels"
        android:name="dev.farad2020.planeticketseller.ui.dashboard.DashboardFragment"
        android:label="@string/title_hotels"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_shorter"
        android:name="dev.farad2020.planeticketseller.ui.notifications.NotificationsFragment"
        android:label="@string/title_shorter"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_subscriptions"
        android:name="dev.farad2020.planeticketseller.ui.notifications.NotificationsFragment"
        android:label="@string/title_subscriptions"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="dev.farad2020.planeticketseller.ui.notifications.NotificationsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>